squashin bugs

--- a/app/assets/stylesheets/points.scss
+++ b/app/assets/stylesheets/points.scss
@@ -17,7 +17,7 @@
       width: 75px;
       height: 75px;
       left: -7px;
-      top: -15px;
+      top: -10px;
       background: black;
       color: white;
       &.pending {
